--- a/startpage/startpage.html
+++ b/startpage/startpage.html
@@ -1,9 +1,12 @@
+
 <!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="UTF-8">
-    <title>Destine's  startpage</title>
+    <title>Destine's startpage</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai" rel="stylesheet">
 </head>
 
 <body>
@@ -26,7 +29,7 @@
             </h1>
             <ul>
                 <li>
-                    <a href="#"></a>
+                    <a href="https://www.uinta1.com">Website link on the left. Title here</a>
                 </li>
                 <li>
                     <a href="#"></a>
@@ -54,7 +57,7 @@
             </h1>
             <ul>
                 <li>
-                    <a href="#"></a>
+                    <a href="https://www.uinta1.com">Website link on the left. Title here</a>
                 </li>
                 <li>
                     <a href="#"></a>
@@ -76,13 +79,13 @@
                 </li>
             </ul>
         </div>
-        <div class="list orangertitle">
+        <div class="list orangetitle">
             <h1>
                 Section 3
             </h1>
             <ul>
                 <li>
-                    <a href="#"></a>
+                    <a href="https://www.uinta1.com">Website link on the left. Title here</a>
                 </li>
                 <li>
                     <a href="#"></a>
@@ -110,7 +113,7 @@
             </h1>
             <ul>
                 <li>
-                    <a href="#"></a>
+                    <a href="https://www.uinta1.com">Website link on the left. Title here</a>
                 </li>
                 <li>
                     <a href="#"></a>
@@ -138,7 +141,7 @@
             </h1>
             <ul>
                 <li>
-                    <a href="#"></a>
+                    <a href="https://www.uinta1.com">Website link on the left. Title here</a>
                 </li>
                 <li>
                     <a href="#"></a>
@@ -166,7 +169,7 @@
             </h1>
             <ul>
                 <li>
-                    <a href="#"></a>
+                    <a href="https://www.uinta1.com">Website link on the left. Title here</a>
                 </li>
                 <li>
                     <a href="#"></a>
